# Project1

./: CMakeLists.txt  Quit.c  README.md  calculate.c  dino.h  main.c
